tests/samples/valid/u8_to_u16.pn
fn main() -> u8
{
	var result = 200;
	var x = 255u8;
	if x as u16 != 255
	{
		result = x;
	}
	return: result
}
