tests/samples/invalid/multibyte_char.pn
fn main() -> u8
{
	var x = '€';
	return: x as u8
}
